--- a/Redux/index.html
+++ b/Redux/index.html
@@ -12,5 +12,6 @@
 
     <script src="https://unpkg.com/redux"></script>
     <script src="reduxSetupStore.js"></script>
+    <script src="pureFunctions.js"></script>
   </body>
 </html>
